<resources>
    <string name="app_name">MEDIA STORE</string>
    <string name="addproduct">Add A New Product</string>
    <string name="name">Product Name</string>
    <string name="price">Price</string>
    <string name="pricetybe">L.E</string>
    <string name="quantity">Quantity</string>
    <string name="suppliertybe">Supplier Tybe</string>
    <string name="phonenumber">Phone</string>
    <string name="unknown">Unknown</string>
    <string name="amazon">Amazon</string>
    <string name="Jumia">Jumia</string>
    <string name="Souq">Souq</string>
    <string name="edit">EDIT</string>
    <string name="sale">SALE</string>
    <string name="save">Save</string>
    <string name="deleted_all_products_message"> deleted from product</string>
    <string name="deleteproduct">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="insert_Failed">Error saving </string>
    <string name="update_successful"> updated successfully</string>
    <string name="insert_Successful">saved successfully</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="action_delete_all_products">Delete Products</string>
    <string name="delete_all">Delete All Products ?</string>
    <string name="Add_product">Add New Products</string>
    <string name="delete_product_failed">Error with deleting Product</string>
    <string name="Editor">Editor</string>
    <string name="editiing">Editing plez</string>
    <string name="update_failed">Error updating product</string>
    <string name="product_name_requires">Product name requires</string>
    <string name="delete_dialog_msg">Delete Product?</string>
    <string name="discard">Discard</string>
    <string name="phone_requires">Phone requires</string>
    <string name="product_view">Product inventory</string>
    <string name="delete_successful">deleted successfully</string>
    <string name="quantity_values_requires">quantity requires</string>
    <string name="quantity_change">Quantity changed</string>
    <string name="price_values_requires">price requires</string>
    <string name="quantity_finish">Product finished </string>
    <string name="edit_product">Edit Product</string>
    <string name="fil_requires">please fill all filed </string>
    <string name="name_requires">Name requires </string>
</resources>